# strawberry-django-auth

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  SubscriptionComp.qml  hello.py  index.html  make_migrations.py  manage.py  migrate.py  migrations_settings.py  mkdocs.yml  pre_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  taskfile.yml  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml  stale.yml
.github/workflow/: tests.yml
.github/workflows/: bot_comment.yml  docs.yml  format.yml  gh-pages.yml  mypy.yml  python-publish.yml  release.yml  release_check.yml  tests.yml
.github/workflows/management/: __main__.py  bot_comment.py  checkrelease.py  githubref.py  release.py  releasefile.py  utils.py
api/: index.html
captcha/: index.html
changelog/: index.html
channels/: index.html
community/: index.html
contributing/: index.html
contributors/: index.html
data/: api.yml
decorators/: index.html
docs/: api.md  captcha.md  changelog.md  channels.md  community.md  contributing.md  contributors.md  decorators.md  directives.md  index.md  installation.md  overriding-email-templates.md  pre_build.py  quickstart.md  relay.md  requirements.txt  settings.md  tutorial.md
docs/data/: api.yml
examples/quickstart/: dev-requirements.txt  pyproject.toml  run_daphne.py  users.json
examples/quickstart/quickstart/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
examples/quickstart/templates/email/: activation_email.html
examples/quickstart/users/: models.py
gqlauth/: __init__.py  admin.py  apps.py  backends.py  constants.py  decorators.py  exceptions.py  forms.py  models.py  scalars.py  schema.py  settings.py  settings_type.py  shortcuts.py  signals.py  types.py  types_.py  utils.py  views.py
gqlauth/administrator/: mixins.py  relay.py
gqlauth/backends/: basebackend.py
gqlauth/backends/django/: __init__.py  admin.py  backend.py  mixins.py  models.py
gqlauth/backends/strawberry_django_auth/: admin.py  apps.py  backend.py  mixins.py  models.py
gqlauth/bases/: exceptions.py  interfaces.py  mixins.py  scalars.py  types_.py
gqlauth/captcha/: captcha_factorty.py  create.py  models.py  types_.py
gqlauth/core/: constants.py  directives.py  exceptions.py  field.py  field_.py  interfaces.py  messages.py  middlewares.py  mixins.py  scalars.py  shortcuts.py  token_to_user.py  types_.py  utils.py
gqlauth/factory/: captcha_factorty.py  create.py
gqlauth/jwt/: default_hooks.py  managers.py  models.py  types_.py
gqlauth/migrations/: 0001_initial.py  0002_alter_userstatus_options.py  0002_initial.py  0002_userrelay_userstatus.py  0003_delete_captcha.py  0003_delete_userrelay.py  0003_remove_captcha_id_alter_captcha_uuid.py  0004_captcha.py  0004_captcha_url.py  0005_rename_url_captcha_image.py  0006_alter_captcha_image.py  0007_refreshtoken.py
gqlauth/templates/email/: User-verified.css  activation_email.html  activation_email_fa.html  nicepage.css  password_set_subject.txt
gqlauth/user/: arg_mutations.py  decorators.py  forms.py  helpers.py  models.py  mutations.py  queries.py  relay.py  resolvers.py  signals.py  types.py  types_.py  views.py
installation/: index.html
overriding-email-templates/: index.html
quickstart/: index.html  manage.py  run_daphne.py  users.json
quickstart/quickstart/: aschema.py  schema.py  settings.py  urls.py
quickstart/templates/email/: activation_email.html
quickstart/users/: models.py
quickstart/users/migrations/: 0001_initial.py  0002_alter_customuser_first_name.py
relay/: index.html
search/: search_index.json
settings/: index.html
src/: setup.py
src/gqlauth/: __init__.py  admin.py  apps.py  constants.py  settings.py  settings_type.py  utils.py
src/gqlauth/bases/: interfaces.py  scalars.py
src/gqlauth/factory/: captcha_factorty.py
src/gqlauth/user/: arg_mutations.py  queries.py  relay.py
testproject/: asgi.py  async_schema.py  manage.py  migrate.py  relay_schema.py  schema.py  settings.py  settings_b.py  urls.py  views.py
testproject/customeuser/: admin.py  apps.py  models.py
testproject/customeuser/migrations/: 0001_initial.py
testproject/customuser/: apps.py  models.py
testproject/customuser/migrations/: 0001_initial.py
testproject/gql/: relay_schema.py  schema.py
testproject/migrations/: 0001_initial.py
testproject/sample/: admin.py  apps.py
testproject/sample/migrations/: 0001_initial.py
testproject/templates/: index.html
testproject/testproject/: asgi.py  settings.py  settings_b.py  urls.py  wsgi.py
testproject/tests/: conftest.py  test_archive_account.py  test_auth_directives.py  test_captcha.py  test_delete_account.py  test_jwt.py  test_login.py  test_middlewares.py  test_password_change.py  test_password_reset.py  test_password_set.py  test_refresh_token.py  test_register.py  test_revoke_token.py  test_send_password_reset_email.py  test_verify_account.py
testproject/users/: models.py
testproject/users/migrations/: 0001_initial.py
tests/: __init__.py  async_schema.py  channelsliveserver.py  conftest.py  manage.py  models.py  schema.py  settings.py  settings_b.py  testCases.py  test_app_settings.py  test_archive_account.py  test_auth_directives.py  test_auth_output.py  test_captcha.py  test_delete_account.py  test_gqlauth_fields.py  test_jwt.py  test_live_servers.py  test_login.py  test_middlewares.py  test_password_change.py  test_password_reset.py  test_password_set.py  test_query.py  test_refresh_token.py  test_register.py  test_remove_secondary_email.py  test_revoke_token.py  test_send_password_reset_email.py  test_swap_emails.py  test_update_account.py  test_verify_account.py  test_verify_secondary_email.py  types.py
tests/migrations/: 0001_initial.py
tests/testproject/: asgi.py  manage.py  migrate.py  pseudo_async_email_support.py  relay_schema.py  run_daphne.py  schema.py  settings.py  settings_b.py  urls.py  users.json
tutorial/: index.html
(+10 files in other folders)
