[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "strawberry-django-auth"
version = "0.378.4"
description = "Graphql authentication system with Strawberry for Django."
readme = "README.md"
maintainers = [
    { name = "Nir Benlulu", email = "nrbnlulu@gmail.com" },
]
authors = [
    { name = "Nir Benlulu", email = "nrbnlulu@gmail.com" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=4.2,<5.3,!=5.0.*,!=5.1.*",
    "django-stubs[compatible-mypy]>=4.2.0",
    "pyjwt>=2.6.0,<3.0",
    # 0.66.0 is the earliest version with Python 3.14 support
    # https://github.com/strawberry-graphql/strawberry-django/releases/tag/v0.66.0
    "strawberry-graphql-django>=0.66.0",
]
optional-dependencies.captcha = [
    # 12.0 is the min version with Python 3.14 support
    # https://pillow.readthedocs.io/en/stable/installation/python-support.html
    "pillow>=12.0.0"
]
urls.Documentation = "https://nrbnlulu.github.io/strawberry-django-auth/"
urls.Homepage = "https://github.com/nrbnlulu/strawberry-django-auth"

[dependency-groups]
dev = [
    "channels[daphne]>=4.0.0",
    "coverage>=7.2",
    "django-mock-queries>=2.1.7",
    "faker>=18.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "markdown>=3.4.1",
    "mkdocs>=1.3.0",
    "mkdocs-markdownextradata-plugin>=0.2.5",
    "mkdocs-material>=8.5.4",
    "mkdocs-minify-plugin>=0.5.0",
    "pre-commit>=4.0.1",
    "pydoc-markdown[novella]>=4.6.4",
    "pygithub>=2.3.0",
    "pymdown-extensions>=9.9",
    "pytest>=7.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4,<8",
    "pytest-django>=4.5.2",
    "setuptools>=67.6.0",
    "toml>=0.10.2",
    "typer>=0.12.1",
    "types-cryptography>=3.3.23",
    "types-jwt>=0.1.0",
    "types-mock>=5.0.0",
]

[tool.hatch]
build.targets.wheel.packages = [ "gqlauth" ]

[tool.ruff]
lint.select = [ "E", "ERA", "F", "I" ]
lint.ignore = [ "E501", "TID252" ]

[tool.pytest]
ini_options.django_find_project = false
ini_options.minversion = "6.0"
ini_options.addopts = "-ra -q"
ini_options.testpaths = [ "tests" ]
ini_options.DJANGO_SETTINGS_MODULE = "tests.testproject.settings_b"
ini_options.python_files = "tests.py test_*.py *_tests.py"
ini_options.asyncio_mode = "auto"
ini_options.markers = [
    "default_user: uses the default settings, a user with email address and default USERNAME_FIELD",
    "settings_b: uses a custom user model, not captcha validation as well as some other non-default settings",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "strawberry.ext.mypy_plugin",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.testproject.settings"
